--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  font_awesome_flutter: ^10.4.0
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  crypto: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -75,11 +77,13 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Ubuntu
+    - family: Roboto
       fonts:
-        - asset: lib/assets/fonts/Ubuntu-Regular.ttf
-        - asset: lib/assets/fonts/Ubuntu-Italic.ttf
+        - asset: lib/assets/fonts/Roboto-Regular.ttf
+        - asset: lib/assets/fonts/Roboto-Italic.ttf
           style: italic
+        - asset: lib/assets/fonts/Roboto-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
