--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   crypto: ^3.0.0
+  animated_splash_screen: ^1.3.0
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
