--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   crypto: ^3.0.0
   animated_splash_screen: ^1.3.0
   page_transition: ^2.1.0
+  appinio_video_player: ^1.2.2
 
 dev_dependencies:
   flutter_test:
