--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   page_transition: ^2.1.0
   appinio_video_player: ^1.2.2
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - lib/assets/icons/
     - lib/assets/images/
     - lib/assets/images/subjects/
   #   - images/a_dot_ham.jpeg
